# CRecipes

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: include.cmake
code/inc/static_graph/: data_table.h  debug_tools.h  fixed_string.h  graph.h  type_list.h
test/: CMakeLists.txt  main.cpp
test/cmake/: include.cmake
test/ut/: CMakeLists.txt  mem_operate_test.cpp  static_graph_test.cpp
